--- a/build.html
+++ b/build.html
@@ -1,1 +1,1 @@
-<fl-helper name="conditional-container" data-widget-name="helper-conditional-container" data-helper-conditional-container-id="{{id}}" data-conditional-container-id="{{id}}"></fl-helper>
+<fl-helper name="conditional-container" data-widget-name="conditional-container"  data-conditional-container-id="{{id}}"></fl-helper>
