feat(DEV-407): refactor conditional container to vanilla js

--- a/build.html
+++ b/build.html
@@ -1,1 +1,1 @@
-<fl-helper name="conditional-container" data-widget-name="conditional-container"  data-conditional-container-id="{{id}}"></fl-helper>
+<div data-widget-package="com.fliplet.conditional-container" data-conditional-container-id="{{id}}"></div>
