--- a/build.html
+++ b/build.html
@@ -1,4 +1,4 @@
-<fl-conditional-container data-widget-name="conditional-container" data-conditional-container-id="{{id}}" data-view="content" data-node-name="Content">
+<fl-conditional-container data-widget-package="com.fliplet.conditional-container" data-conditional-container-id="{{id}}" data-view="content" data-node-name="Content">
     <template type="text/html" name="empty"><div data-view-placeholder>Configure Conditional container and drag &amp; drop components inside it</div></template>
     {{{ content }}}
 </fl-conditional-container>
